--- a/.github/workflows/test_monthly.yml
+++ b/.github/workflows/test_monthly.yml
@@ -3,6 +3,7 @@ name: Monthly Report
 on:
   workflow_dispatch:
   schedule:
+    # JST 09:20 = UTC 00:20 / 平日(月〜金)のみ
     - cron: "20 0 * * 1-5"
   push:
     paths:
@@ -39,12 +40,16 @@ jobs:
 
       - name: Commit and Push state.json
         run: |
-          if git diff --quiet -- state.json; then
+          # untracked の state.json も拾うために先に add する
+          git add state.json || true
+
+          # staged 差分がなければ終了
+          if git diff --cached --quiet; then
             echo "No state.json changes"
             exit 0
           fi
+
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add state.json
           git commit -m "Update state.json"
           git push
